[UPDATE DEPENDENCIES AND ROMVE UNUSED]: update dependencies and restructure styles
- Updated Astro to version 5.12.3 and Tailwind CSS to version 4.1.11.
- Removed unused dependencies: @astrojs/react, @astrojs/tailwind, @types/react, @types/react-dom, react, and react-dom.
- Added global CSS import in Layout.astro for Tailwind CSS.
- Deleted outdated Tailwind configuration file.
- Created a new global CSS file to import Tailwind CSS styles.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import { ClientRouter } from "astro:transitions";
 import "devicon/devicon.min.css";
 import "aos/dist/aos.css";
+import "../styles/global.css"
 
 interface Props {
   title: string;
