[REFACTOR AND RESTYLISH] Rebuild whole portafolio to imporve the desing, star to change and delete some files
-Start stylish with the css in global.css file

-Refactor Layout, index and Contact, files

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ const { title, description = "Welcome to Kevin's Developer Portfolio", lang = "e
 ---
 
 <!DOCTYPE html>
-<html lang={lang}>
+<html lang={lang} class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
